--- a/app/views/courses/_list_summary.html.haml
+++ b/app/views/courses/_list_summary.html.haml
@@ -9,10 +9,10 @@
           = link_to course.title, course
         %p
           Subject:
-          %strong #{course.subject}
+          %strong #{course.subject_value}
         %p
           Topic:
-          %strong #{course.topic}
+          %strong #{course.topic_value}
       .col-xs-12.col-md-6.col-lg-6
         %p= course.description
     .col-xs-2.col-md-1
