--- a/app/views/fill_in_the_blank_questions/_rec_show.html.haml
+++ b/app/views/fill_in_the_blank_questions/_rec_show.html.haml
@@ -10,6 +10,8 @@
   = link_to 'Skills', skills_fill_in_the_blank_question_path(@question)
 = @question
 = form_for @question, url: submit_answer_fill_in_the_blank_question_path(@question), method: :post do |f|
+  - extra_params.each do |(key, value)|
+    = f.hidden_field key, value: value
   .form-group
     = label_tag :answer
     = text_field_tag :answer, nil, class: 'form-control', placeholder: 'answer...'
