--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -37,6 +37,8 @@
             %li= link_to 'Help', help_path
             %li= link_to 'About', about_path
             - if current_user
+              %li= link_to 'Recommended Material', recommendations_users_path
+              %li= link_to 'Skills', details_users_path
               %li= link_to 'Log out', destroy_user_session_path, method: :delete
             - else
               %li=link_to 'Sign up', new_user_registration_path
