fix redirect bug

--- a/app/views/courses/finished.html.haml
+++ b/app/views/courses/finished.html.haml
@@ -9,4 +9,4 @@
           It is time to celebrate yeah!
         %p
           Please enjoy some more courses
-          = link_to 'here!', course_path
+          = link_to 'here!', courses_path
