--- a/app/views/courses/index.html.haml
+++ b/app/views/courses/index.html.haml
@@ -1,12 +1,11 @@
-.row
+.col-xs-12
   .col-xs-12
     .page-header
       %h1 #{t('app_name')} Courses
-.row
   .col-xs-12
     - @courses.each do |course|
       .row
         = render partial: 'list_summary', locals: { course: course }
-.row
+.col-xs-12
   = link_to new_course_path, class: 'btn btn-lg btn-default', role: 'button' do
     Add course &plus;
