--- a/app/views/lessons/_pages_form.html.haml
+++ b/app/views/lessons/_pages_form.html.haml
@@ -5,6 +5,7 @@
       %th Type
       %th
       %th
+      %th
     - @lesson.pages.each do |page|
       %tr
         %td= link_to page.decorate.number, page
@@ -15,6 +16,9 @@
         %td
           = button_to move_lower_page_path(page), { method: :put, class: 'btn btn-sm btn-default' } do
             Move down
+        %td
+          = form_for page,  method: :delete do |f|
+            = f.submit 'Delete', class: 'btn btn-danger'
 .col-xs-3.col-md-2
   = render layout: 'page_form_modal' do |modal_id|
     %button.btn.btn-default{ 'data-toggle' => 'modal', 'data-target' => modal_id }
